[package]
name = "myoss"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = { version = "0.7.5", features = ["multipart"] }
tokio = { version = "1.36.0", features = ["full"] }
futures = "0.3.30"
uuid = { version = "1.8.0", features = ["v4"] }
hyper = "1.2.0"
aes-gcm = "0.10.0"
rand = "0.8.5"
dotenv = "0.15.0"
sqlx = { version = "0.6.2", features = ["runtime-tokio-rustls", "sqlite", "chrono"] }
hex = "0.4.3"
ctr = "0.9.2"